--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
 
+nav{
+  color: white;
+}
 
+.menu li {
+  display: inline-block;
+  position: relative;
+}
+
+.text-block {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #f9f9f9;
+  color: black;
+  padding: 10px;
+  width: 200px;
+  z-index: 1;
+}
+
+.menu li:hover .text-block {
+  display: block;
+}
+  
+  
   select {
     font-size: 16px;
     padding: 8px;
