--- a/style.css
+++ b/style.css
@@ -1,26 +1,40 @@
 
-nav{
+.navBar{
   color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  
+}
+.menu img {
+  height: 80px;
+  width: auto;
+  margin-right: 10px;
 }
 
 .menu li {
   display: inline-block;
   position: relative;
+  padding-right: 20px;
 }
-
-.text-block {
+/* popup text block */
+.text-block, .text-cheese{
   display: none;
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: #f9f9f9;
-  color: black;
+  background-color: rgba(255, 255, 255, 0.4); /* White color with 50% opacity */
   padding: 10px;
-  width: 200px;
-  z-index: 1;
+  border-radius: 5px;
+  color: black;
+  width: 300px;
+  z-index: 1; /* specifies the stacking order of an element in relation to other elements on a web page. */
 }
 
 .menu li:hover .text-block {
+  display: block;
+}
+
+.menu li:hover .text-cheese {
   display: block;
 }
   
