--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 
 .navBar{
+  display: inline-flex;
+  justify-content: flex-start;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
+  width: 100%;
   
 }
+
+.menu{
+  margin: 0px;
+}
+
 .menu img {
   height: 80px;
   width: auto;
@@ -38,8 +46,46 @@
   display: block;
 }
   
-  
-  select {
+/* search button */
+
+.searchSignin form {
+  position: relative;
+  display: inline-block;
+  margin-top: 50px;
+}
+
+input[type="text"] {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+button[type="submit"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.fa-search {
+  font-size: 25px;
+  color: rgb(29, 28, 28);
+}
+
+.searchSignin{
+  display: flex;
+  justify-content: space-around;
+  margin-left: 100px;
+}
+
+.searchSignin p, .fa-regular {
+  margin-top: 60px;
+  padding-left: 40px;
+}
+  /* select {
     font-size: 16px;
     padding: 8px;
     border: 1px solid #ccc;
@@ -49,7 +95,7 @@
   
   option {
     font-size: 16px;
-  }
+  } */
   
   body {
     background-image: url("images/pexels-pixabay-36741.jpg");
@@ -59,9 +105,9 @@
     height: auto;
   }
 
-  div h1 {
+  /* div h1 {
     margin-top: 50px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 5rem;
     color: white
-  }
+  } */
