--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+:root {
+  --textColor: white;
+  --fontFamily: Arial, Helvetica, sans-serif;
+}
 
 .navBar{
   display: inline-flex;
   justify-content: flex-start;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  color:var(--textColor);
+  font-family: var(--fontFamily);
   font-size: 20px;
   width: 100%;
   
@@ -101,9 +105,53 @@ button[type="submit"] {
     background-image: url("images/pexels-pixabay-36741.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     max-width: 100%;
-    height: auto;
+    height: 100vh;
   }
+
+  /* site intro */
+   /* .siteIntro{
+    
+    display: grid;
+    grid-template-columns: repeat(2, 200px);
+    grid-template-rows: repeat(2,200px);
+    row-gap: 50px;
+    /* flex-direction: column; */
+    /* color: var(--textColor);
+    font-family: var(--fontFamily);
+    font-weight: 10;  */
+    /* position grid to the left */
+   /* position: absolute;
+    right: 0; 
+    
+    padding-right: 5%;
+    padding-top: 5%;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    line-height: 1.5;
+    
+  } */
+
+  /* .siteIntro>p{
+    grid-column: 1/-1;
+  }
+
+  .siteIntro>.btnFind{
+    grid-column: 1/-1
+  } */
+
+  /* .btnFind{ */
+    /* background-color: transparent; */
+    /* border: 2px solid white;
+    border-radius: 10px;
+    width: 50%;
+    height: 30%;
+    font-family: var(--fontFamily);
+    color: var(--textColor);
+    font-size: larger;
+    background-color: transparent; 
+  }*/
 
   /* div h1 {
     margin-top: 50px;
@@ -111,3 +159,45 @@ button[type="submit"] {
     font-size: 5rem;
     color: white
   } */
+
+.siteIntro{
+  color: var(--textColor);
+  font-family: var(--fontFamily);
+  font-weight: 10;
+  padding-right: 5%;
+  padding-top: 5%;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-shadow: 2px 0px 4px rgb(20, 20, 20);
+}
+.siteIntro p{
+  width: 65ch;
+  
+}
+
+.btnExplore{
+  border: 2px solid white;
+  border-radius: 10px;
+  width: 300px;
+  height: 70px;
+  font-family: var(--fontFamily);
+  color: var(--textColor);
+  font-size: larger;
+  background-color: transparent;
+  text-shadow: 2px 0px 4px rgb(20, 20, 20); 
+}
+
+.siteIntro button {
+  margin: auto 30px auto auto; 
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* text-align: center; */
+}
+
+
+
+
