--- a/style.css
+++ b/style.css
@@ -198,6 +198,25 @@ button[type="submit"] {
   /* text-align: center; */
 }
 
+footer{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  margin-top: 350px;
+  gap: 10px;
+  color: var(--textColor);
+  font-family: var(--fontFamily);
+}
+
+footer>i{
+  text-align: center;
+}
+footer>p{
+  /* display: none; */
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 
 
 
