--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
   --textColor: white;
+  --textColorSchPg: rgb(38, 35, 30);
+  --titleBackgroundColor: rgb(93, 91, 91);
   --fontFamily: Arial, Helvetica, sans-serif;
 }
 
@@ -7,6 +9,16 @@
   display: inline-flex;
   justify-content: flex-start;
   color:var(--textColor);
+  font-family: var(--fontFamily);
+  font-size: 20px;
+  width: 100%;
+  
+}
+
+.navBarSearch{
+  display: inline-flex;
+  justify-content: flex-start;
+  color:var(--textColorSchPg);
   font-family: var(--fontFamily);
   font-size: 20px;
   width: 100%;
@@ -55,7 +67,8 @@
 .searchSignin form {
   position: relative;
   display: inline-block;
-  margin-top: 50px;
+  margin-top: 63px;
+  height: fit-content;
 }
 
 input[type="text"] {
@@ -89,7 +102,7 @@ button[type="submit"] {
   margin-top: 60px;
   padding-left: 40px;
 }
-  /* select {
+  select {
     font-size: 16px;
     padding: 8px;
     border: 1px solid #ccc;
@@ -97,11 +110,7 @@ button[type="submit"] {
     margin-left: 100px;
   }
   
-  option {
-    font-size: 16px;
-  } */
-  
-  body {
+  .indexPage {
     background-image: url("images/pexels-pixabay-36741.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -109,56 +118,6 @@ button[type="submit"] {
     max-width: 100%;
     height: 100vh;
   }
-
-  /* site intro */
-   /* .siteIntro{
-    
-    display: grid;
-    grid-template-columns: repeat(2, 200px);
-    grid-template-rows: repeat(2,200px);
-    row-gap: 50px;
-    /* flex-direction: column; */
-    /* color: var(--textColor);
-    font-family: var(--fontFamily);
-    font-weight: 10;  */
-    /* position grid to the left */
-   /* position: absolute;
-    right: 0; 
-    
-    padding-right: 5%;
-    padding-top: 5%;
-    letter-spacing: 2px;
-    word-spacing: 2px;
-    line-height: 1.5;
-    
-  } */
-
-  /* .siteIntro>p{
-    grid-column: 1/-1;
-  }
-
-  .siteIntro>.btnFind{
-    grid-column: 1/-1
-  } */
-
-  /* .btnFind{ */
-    /* background-color: transparent; */
-    /* border: 2px solid white;
-    border-radius: 10px;
-    width: 50%;
-    height: 30%;
-    font-family: var(--fontFamily);
-    color: var(--textColor);
-    font-size: larger;
-    background-color: transparent; 
-  }*/
-
-  /* div h1 {
-    margin-top: 50px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 5rem;
-    color: white
-  } */
 
 .siteIntro{
   color: var(--textColor);
@@ -198,11 +157,54 @@ button[type="submit"] {
   /* text-align: center; */
 }
 
-footer{
+.wineRegion{
+  display: flex;
+  justify-content: space-around;
+  height: 630px;
+  /* margin-right: 50px; */
+}
+
+.wineList, .WineryDescription {
+  width: 352px;
+  height: 580px;
+  padding-top: 30px;
+  overflow-y: scroll;
+  font-family: var(--fontFamily);
+}
+
+.WineryDescription{
+  padding: 50px;
+}
+
+figcaption{
+  font-family: var(--fontFamily);
+  color: var(--textColorSchPg);
+  font-weight: bolder;
+
+}
+
+.wineList a {
+  background-color: #eee;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.wineList a:hover {
+  background-color: #ccc;
+}
+
+.wineList a.active {
+  background-color: var(--titleBackgroundColor);
+  color: white;
+}
+
+footer {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  margin-top: 350px;
+  margin-top: 340px;
   gap: 10px;
   color: var(--textColor);
   font-family: var(--fontFamily);
@@ -211,10 +213,17 @@ footer{
 footer>i{
   text-align: center;
 }
-footer>p{
+footer>p, .WineryDescription{
   /* display: none; */
-  margin-block-start: 0;
-  margin-block-end: 0;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.searchPage{
+  color: var(--textColorSchPg);
+  margin-top: 0px;
 }
 
 
