--- a/style.css
+++ b/style.css
@@ -149,6 +149,15 @@ button[type="submit"] {
     height: 100vh;
   }
 
+  .contactUsPage {
+    background-image: url("./images/Screenshot\ 2023-03-09\ at\ 22.27.05.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    max-width: 100%;
+    height: 100vh;
+  }
+
 .siteIntro{
   color: var(--textColor);
   font-family: var(--fontFamily);
@@ -249,7 +258,7 @@ footer {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  margin-top: 340px;
+  margin-top: 0px;
   gap: 10px;
   color: var(--textColor);
   font-family: var(--fontFamily);
