--- a/style.css
+++ b/style.css
@@ -17,6 +17,75 @@ header{
   margin: 10px 0px 10px 0px
 }
 
+/* Header for contact us */
+.contactUs{
+  display: block;
+  position: relative;
+  text-align: left;
+  
+}
+.contactUs>.divImg{
+  background-color: aliceblue;
+}
+
+.divImg>img{
+  width: 100px;
+  height: auto;
+}
+.contactUs>p{
+  display: flex;
+  flex-direction: column;
+  color:#ccc;
+}
+
+.contactUs>section{
+  font-size: 26px;
+  text-align: left;
+  color: #ccc;
+  width: 460px;
+  font-weight: 400;
+  
+}
+
+.talkToUs{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  font-family: var(--fontFamily);
+  font-size: 18px;
+  color: black;
+  text-align: center;
+  gap: 20px;
+  margin: 0px 20px 0px 20px;
+  
+}
+
+.talkToUs>div{
+  background-color: #eaf5fcd1;
+  padding-bottom: 100px;
+}
+
+div > .class:nth-of-type(2) > p{
+  margin-top: 50px;
+}
+.talkToUs>div>img{
+  padding-top: 10px;
+  width: 50px;
+  height: auto;
+}
+
+.talkToUs>div>button{
+    background-color: orange;
+    border-radius: 10px;
+    font-weight: bold;
+    padding: 10px 20px;
+    box-shadow: 2px 2px 5px #888888;
+  }
+
+  .pBlockTitle{
+    font-size: 18px;
+    font-weight: bold;
+  }
 .navBar{
   display: inline-flex;
   justify-content: flex-start;
@@ -278,6 +347,10 @@ footer>p, .WineryDescription{
 .searchPage{
   color: var(--textColorSchPg);
   margin-top: 0px;
+}
+
+.footerContactUs{
+  margin-top: 100px;
 }
 
 
